--- a/css/global.css
+++ b/css/global.css
@@ -229,6 +229,9 @@ nav a.new           { background: url("../img/icon/new.png") no-repeat 0px; }
 nav a.collection    { background: url("../img/icon/collection.png") no-repeat 0px; }
 nav a.history       { background: url("../img/icon/history.png") no-repeat 0px; }
 
+main > h2 { display: inline-block;}
+
+
 @media (max-width: 450px){
     #albums article {
         max-width: 49% !important;
@@ -237,12 +240,14 @@ nav a.history       { background: url("../img/icon/history.png") no-repeat 0px; 
 }
 
 @media (max-width: 768px){
-    header .col-sm-6{ display: none;}
+    header .col-sm-5{ display: none;}
     .name a { display: none;}
+    .links.col-sm-4 { text-align: left;}
+    .stats-links > * { height: 20px;}
 }
 
 /* grossir */
-@media (min-width: 1400px) { body{ font-size: 100% !important; } }
+@media all and (min-width: 1400px) { body{ font-size: 100% !important; } }
 
 /* plus petit */
-@media (max-width: 600px) { body{ font-size: 100% !important; } }
+@media (max-width: 600px) { body{ font-size: 40% !important; } }
